# nnfs

./: Cargo.toml  README.md
src/: five.rs  four.rs  four_oops.rs  main.rs  one.rs  spiral_data_X.txt  three.rs  two.rs
src/data/: spiral_data_y.txt
