[package]
name = "try_out"
version = "0.1.0"
authors = ["rd2575691 <52597852+rd2575691@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libmath = "0.2.1"
rand = "0.7.3"
ndarray = "0.13.0"
ndarray-rand = "0.11.0"